--- a/infoIntro/timeTable.html
+++ b/infoIntro/timeTable.html
@@ -9,6 +9,16 @@
 
     <title>老狼的資科概</title>
 
+<!-- Global Site Tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-106338304-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments)};
+  gtag('js', new Date());
+
+  gtag('config', 'UA-106338304-1');
+</script>
+
     <!-- Bootstrap core CSS -->
     <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
 
@@ -44,6 +54,9 @@
             </li>
             <li class="nav-item">
               <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
+            </li>
+            <li class="nav-item">
+              <a target="_self" class="nav-link" href="info-system.html">旅遊計畫書</a>
             </li>
             <li class="nav-item">
               <a target="_self" class="nav-link" href="#">TBA...</a>
