--- a/infoIntro/tour-plan.html
+++ b/infoIntro/tour-plan.html
@@ -41,7 +41,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarResponsive">
           <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
+            <li class="nav-item">
               <a target="_self" class="nav-link" href="index.html">資訊科技概論
                 <span class="sr-only">(current)</span>
               </a>
@@ -55,7 +55,7 @@
             <li class="nav-item">
               <a target="_self" class="nav-link" href="info-system.html">麗山資訊系統</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a target="_self" class="nav-link" href="info-system.html">旅遊計畫書</a>
             </li>
             <li class="nav-item">
@@ -69,124 +69,111 @@
     <div class="overlay">
       <div class="container">
         <h1 class="display-1 text-white">資訊科技概論</h1>
-        <h2 class="display-4 text-white">106學年度‧上學期</h2>
-        <p class="text-white"><del>立志成為最潮的課程網站(?)</del></p>
+        <h2 class="display-4 text-white">旅遊計畫書</h2>
       </div>
     </div>
   </header>
 
-  <!-- main -->
-  <section>
+  <!-- Main -->
+      <section>
     <div class="container">
       <div class="row align-items-center">
-        <div class="col-md-6 order-2">
+        <div class="col-md-3 order-1">
           <div class="p-5">
-            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=445" alt="">
+            <img class="img-fluid rounded-circle" src="mindmap.png" alt="">
           </div>
         </div>
-        <div class="col-md-6 order-1">
+        <div class="col-md-9 order-2">
           <div class="p-5">
-            <h2 class="display-4">麗山與它的資訊系統們</h2>
-            <p>要成為一個合格的麗山人，你至少要會收信吧...?</p>
-            <p>線上選社呢?查成績呢?</p>
-            <p>課程網站怎麼進去? &nbsp; &nbsp; --欸不是只有資訊科會用課程網站喔</p>
-            <p>什麼!? 課程網站有分三種!?</p>
-            <p>老師對不起我又忘記密碼了...orz</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 order-1">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=403" alt="">
-          </div>
-        </div>
-        <div class="col-md-6 order-2">
-          <div class="p-5">
-            <h2 class="display-4">英文打字練習</h2>
-            <p>天下武功 唯快不破</p>
-            <p>要把資訊科學好，就要先練成打字神速無影手！<br>
-              (大概啦?)</p>
-            <p>打字測驗程式 - <a href="https://drive.google.com/open?id=0B65DH-sSwkNARVJjbHVZSlZxc00">WinWTS</a></p>
-            <p>f(n) = 2*n + 30 ， 測5次取較高分的3次平均</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 order-2">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1455390582262-044cdead277a?dpr=2&auto=format&fit=scale&w=300&h=300&q=80" alt="">
-          </div>
-        </div>
-        <div class="col-md-6 order-1">
-          <div class="p-5">
-            <h2 class="display-4">部落格寫作</h2>
-            <p>這是網路訊息爆炸的時代</p>
-            <p>充滿直播、影片、照片，或者只有一句話的即時訊息</p>
-            <p>想當年無名小站還在的時候...我們是怎麼思考的...?</p>
-            <p>(幾乎)每週一篇部落格文章，400字以上原創文字，嚴禁抄襲</p>
-            <p>如果是閱讀文章/新聞產生的心得，請附參考資料連結</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  
-
-  <section>
-    <div class="container">
-      <div class="row align-items-center">
-        <div class="col-md-6 order-1">
-          <div class="p-5">
-            <img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=371" alt="">
-          </div>
-        </div>
-        <div class="col-md-6 order-2">
-          <div class="p-5">
-            <h2 class="display-4">旅遊計畫書</h2>
-            <p>放心吧其實沒有真的要出去玩 :p</p>
-            <p>學會使用google文件、試算表、簡報等等服務，讓小組合作更方便。</p>
-            <p>當然還要有精美排版啊</p>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-
-  <section>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-md-6 order-2">
-            <div class="p-5">
-              <!--<img class="img-fluid rounded-circle" src="https://unsplash.it/500/500?image=1" alt="">-->
-              <img class="img-fluid rounded-circle" src="https://images.unsplash.com/photo-1488590528505-98d2b5aba04b?dpr=1&auto=format&fit=crop&w=500&h=500&q=80&cs=tinysrgb&crop=" alt="">
+            <h2 class="display-4">心智圖</h2>
+            <p>一個旅遊計畫書應該要有哪些內容？<br>
+               如果你要辦班遊，要說服班上同學們都參加，你要先寫出哪些東西？</p>
+            <p>先列出大綱構想，再陸續補足每個大分類中的小細節</p>
+            <p>常用工具有<a href="http://www.xmind.net/">XMind</a>和<a href="http://freemind.sourceforge.net/">FreeMind</a></p>
+            <p>但是我們課堂上要教的是<a href="https://coggle.it/">coggle</a><br>
+               雲端協作 - 網頁介面免安裝、自動存檔、多人同時編輯</p>
             </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+      <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3 order-1">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="http://is2.mzstatic.com/image/thumb/Purple128/v4/44/2c/b7/442cb71f-91cc-6123-685d-9efde18fb7b7/source/1200x630bb.jpg" alt="">
           </div>
-          <div class="col-md-6 order-1">
-            <div class="p-5">
-              <h2 class="display-4">C語言程式設計入門</h2>
-              <p>學習程式設計不是要每個人都成為軟體工程師，而是訓練系統化解決問題的方法和邏輯思維</p>
-              <p><del>好課值得一修再修(?)</del></p>
-              <p>很入門很入門</p>
-              <p>但是還是很可怕很可怕</p>
-              <p>哎呀反正你就專心用力把它聽懂，你就已經贏過全國87%(?)的人了<br>
-                真的！</p>
+        </div>
+        <div class="col-md-9 order-2">
+          <div class="p-5">
+            <h2 class="display-4">雲端硬碟</h2>
+        <p><a href="http://drive.google.com">http://drive.google.com</a></p>
+        <p>google 教育版帳號 - 容量無上限！</p>
+        <p>檔案共用 - 是擁有者 / 可以編輯 / 可以註解 / 可以檢視<br>
+           資料夾共用 - 是擁有者 / 可以整理、新增、編輯 / 僅供檢視</p>
+        <p>共享連結 - 關閉 / 網域中的使用者 / 無需登入</p>
+        <p>從「與我共用」新增至「我的雲端硬碟」</p>
+        <p>可設定共用到期日</p>
+        <p>本機檔案「備份與同步處理」、手機版「google雲端硬碟」</p>
             </div>
+        </div>
+      </div>
+    </div>
+  </section>
+
+<style>
+  .img-list {
+    max-width: 48%;
+    height: auto;
+  }
+</style>
+
+  <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3 order-1">
+          <div class="p-4">
+            <img class="img-list" src="https://lh4.ggpht.com/-wROmWQVYTcjs3G6H0lYkBK2nPGYsY75Ik2IXTmOO2Oo0SMgbDtnF0eqz-BRR1hRQg=w300" alt="">
+            <img class="img-list" src="https://lh3.ggpht.com/e3oZddUHSC6EcnxC80rl_6HbY94sM63dn6KrEXJ-C4GIUN-t1XM0uYA_WUwyhbIHmVMH=w300" alt="">
+            <img class="img-list" src="https://lh3.ggpht.com/9rwhkrvgiLhXVBeKtScn1jlenYk-4k3Wyqt1PsbUr9jhGew0Gt1w9xbwO4oePPd5yOM=w300" alt="">
+            <img class="img-list" src="http://www.ryerson.ca/content/dam/google/teach-with-google-apps/quizzes-surveys/create-google-form/google-form" alt="">
+            <img class="img-list" src="https://www.mobilworx.com/img/icerikGorselleri/32647272ec6cf0de7945f0445279ca1e.jpg" alt="">
+          </div>
+        </div>
+        <div class="col-md-9 order-2">
+          <div class="p-5">
+            <h2 class="display-4">google文件</h2>
+            <h2 class="display-4">google試算表</h2>
+            <h2 class="display-4">google簡報</h2>
+            <h2 class="display-4">google表單</h2>
+            <h2 class="display-4">google地圖</h2>
           </div>
         </div>
       </div>
-    </section>
-        <!-- Footer -->
+    </div>
+  </section>
+
+      <section>
+    <div class="container">
+      <div class="row align-items-center">
+        <div class="col-md-3 order-1">
+          <div class="p-5">
+            <img class="img-fluid rounded-circle" src="http://images.sftcdn.net/images/t_optimized,f_auto/p/f00e28a8-96d9-11e6-b450-00163ed833e7/2933457091/autodesk-pixlr-for-windows-10-logo.png" alt="">
+          </div>
+        </div>
+        <div class="col-md-9 order-2">
+          <div class="p-5">
+            <h2 class="display-4">圖片編輯</h2>
+        <p>pixlr - 線上影像編輯程式</p>
+        <p><a href="https://pixlr.com/">https://pixlr.com/</a></p>
+            </div>
+        </div>
+      </div>
+    </div>
+  </section>
+    <!-- Footer -->
     <footer class="py-5 bg-dark">
       <div class="container">
         <p class="m-0 text-center text-white">Copyright &copy; wolfdigit@LSSH 2017</p>
